# Yer-Kontrol-Istasyon

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
